--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 24px;
+  font-size: 28px;
 }
 
 :root {
@@ -75,4 +75,9 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+@font-face {
+  font-family: 'Wordah';
+  src: url('./assets/fonts/WordahRegular.ttf') format('truetype');
 }
